k8s-policies/allow-cart-to-product.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cart-to-product
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: cart
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: product
    ports:
    - protocol: TCP
      port: 9000
