k8s-policies/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: prod
spec:
  # Select all pods in the namespace
  podSelector: {}
  
  policyTypes:
  - Ingress
  ingress:
  - to:
    - podSelector: {}
    - namespaceSelector: 
      matchLabels:
        name: prod
  - Egress
  egress:
  - to:
    - podSelector: {}
      namespaceSelector: 
      matchLabels:
        name: prod
